# MyLearn

./: .clang-format  .gitignore  CMakeLists.txt
before_2024_10_10/: CMakeLists.txt
before_2024_10_10/day1/: day1.cpp
before_2024_10_10/day10/: CMakeLists.txt  main.cpp
before_2024_10_10/day12/IPMPIL/: gadget.h
before_2024_10_10/day13/: readme.md
before_2024_10_10/day14/: CMakeLists.txt
before_2024_10_10/day15/: CMakeLists.txt
before_2024_10_10/day16/: main.cpp
before_2024_10_10/day17/: proxy.hpp
before_2024_10_10/day18/: design_patterns.md
before_2024_10_10/day19/: CMakeLists.txt
before_2024_10_10/day2/: CMakeLists.txt  day2.cpp
before_2024_10_10/day20/: CMakeLists.txt  main.cpp
before_2024_10_10/day21/: main.cpp  readme.md
before_2024_10_10/day22/: CMakeLists.txt
before_2024_10_10/day23/: main.cpp
before_2024_10_10/day25/: main.c
before_2024_10_10/day27/: Makefile  singleton.cpp
before_2024_10_10/day29/: main.cpp  setenv.sh
before_2024_10_10/day29/inc/: test.h
before_2024_10_10/day29/src/: test.cpp
before_2024_10_10/day3/: day3.cpp
before_2024_10_10/day3/text/: CMakeLists.txt
before_2024_10_10/day30/inc/: ConcreteObserver.h  ConcreteSubject.h
before_2024_10_10/day31/: CMakeLists.txt  main.cpp  readme.md
before_2024_10_10/day32/: main.cpp
before_2024_10_10/day33/: main.cpp
before_2024_10_10/day33/template/: template.h
before_2024_10_10/day35/: CMakeLists.txt
before_2024_10_10/day4/: CMakeLists.txt
before_2024_10_10/day5/: CMakeLists.txt  day5.cpp  readme.md
before_2024_10_10/day6/: CMakeLists.txt  day6.cpp
before_2024_10_10/day6/makeFrame/: CMakeLists.txt  makeFrame.h
before_2024_10_10/day7/: CMakeLists.txt  main.cpp
before_2024_10_10/day7/threadpool/: threadpool.cpp
before_2024_10_10/day8/: main.cpp
before_2024_10_10/day9/: template.cpp
day1/: CMakeLists.txt  day1.cpp
day10/: main.cpp
day11/: CMakeLists.txt  mytest.cpp
day12/: CMakeLists.txt  programmer.cpp
day12/IPMPIL/: CMakeLists.txt  weight.cpp  weight.h
day13/: CMakeLists.txt  main.cpp
day14/: main.cpp
day15/: main.cpp  readme.md
day16/: CMakeLists.txt
day17/: CMakeLists.txt  main.cpp  readme.md  text.txt
day19/: main.cpp
day21/: CMakeLists.txt
day22/: main.cpp
day23/: CMakeLists.txt
day24/: Makefile
day25/: Makefile  main.c  test
day27/: Makefile  build.sh  singleton  singleton.cpp
day28/: Makefile
day29/: Makefile  build.sh  main.cpp
day3/: CMakeLists.txt
day3/text/: text.cpp  text.h
day30/: Makefile  main.cpp
day30/inc/: Observer.h  Subject.h
day31/: main.cpp
day32/: CMakeLists.txt
day33/: CMakeLists.txt
day34/: CMakeLists.txt  main.cpp
day34/inc/common_struct/: node_conf.h
day34/inc/third_part/nlohmann/: json.hpp
day34/inc/third_part/nlohmann/detail/conversions/: to_json.hpp
day34/inc/third_part/nlohmann/detail/input/: json_sax.hpp
day35/: main.cpp
day4/: consumer_producer.cpp  readme.md
day6/makeFrame/: makeFrame.cpp
day7/threadpool/: CMakeLists.txt  threadpool.h
day8/: CMakeLists.txt  main.cpp  readme.md
day9/: CMakeLists.txt  template.cpp
design_pattern/patterns_of_behavior/: main.cpp
ipc/pipe/: fiforead.c  fifowrite.c  pipe.c  readme.md
ipc/sem/: readme.md  sem1.c
ipc/shared_shm/: shma.c
ipc/shared_shm/sem_com/: CMakeLists.txt  rd.c  sem.c  wr.c
ipc/signal/: readme.md  signal.c
ipc/socket/: readme.md
makefile_learn/: readme.md
makefile_learn/01/: Makefile
makefile_learn/02/build_x86/: hello_main
makefile_learn/02/sources/: hello_func.c
makefile_learn/03/: Makefile
multi_thread_learn/: CMakeLists.txt
multi_thread_learn/condition/: con.cpp
multi_thread_learn/epoll_test/: CMakeLists.txt  epoll_client.cpp  epoll_server.cpp
multi_thread_learn/thread/: CMakeLists.txt  main.cpp
shared_shm/: shmb.c
shared_shm/sem_com/: sem.h
template/: enable_if.cpp
template/C++11/: demo_01.cpp  demo_02.cpp  demo_03.cpp  demo_04.cpp
template/C++14/: demo_01.cpp  demo_02.cpp  demo_03.cpp
template/C++17/: demo_01.cpp  demo_02.cpp
test_go/: test001.go  test002.go  test003.go
test_valgrind/: main.cpp  readme.md  test_stl.cpp
