cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_BUILD_TYPE Release)

project(My)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/output)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)

# add_subdirectory(day1)
# add_subdirectory(day2)
# add_subdirectory(day3)
# add_subdirectory(day4)
# add_subdirectory(day5)
# add_subdirectory(day6)
# add_subdirectory(day7)
# add_subdirectory(day8)
# add_subdirectory(day9)
# add_subdirectory(day10)
# add_subdirectory(day11)
# add_subdirectory(day12)
# add_subdirectory(day13)
# add_subdirectory(day14)
# add_subdirectory(day15)
# add_subdirectory(day16)
# add_subdirectory(day17)
# add_subdirectory(day19)
# add_subdirectory(day20)
# add_subdirectory(day21)
# add_subdirectory(day22)
# add_subdirectory(day23)
# add_subdirectory(day31)
# add_subdirectory(day32)
# add_subdirectory(day33)
add_subdirectory(day34)